mise à jour du client
